--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
-    "sass": "^1.39.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.39.2"
   }
 }
